# merge-and-split

./: .gitignore  Cargo.toml  README.md
.agent/: ARCHITECTURE.md  CODING_GUIDELINES.md  PROJECT_OVERVIEW.md
.agent/tasks/: task 1 - add total_time.plan-ok.md  task 1 - add total_time.walkthrough.md  task 2 - irc fixes.plan-ok.md  task 2 - irc fixes.txt  task 2 - irc fixes.walkthrough.md  task 3 - leaderboard ui.plan-ok.md  task 3 - leaderboard ui.txt  task 3 - leaderboard ui.walkthrough.md
.agent/workflows/: add-constraint.md  build-and-run.md  process-tasks.md
.github/workflows/: rust.yml
res/: line_shader.wgsl  particle_shader.wgsl
src/: lib.rs  main.rs  operation.rs  operation_merge.rs  operation_move.rs  operation_split.rs  particle.rs  particle2.rs  particle_system.rs  particle_system_merge.rs
src/constraints/: fixed_point_spring.rs  mod.rs  stick.rs
src/constraints2/: boundary_constraint.rs  contact_constraint.rs  distance_constraint.rs  gas_constraint.rs  mod.rs  rigid_contact_constraint.rs  total_fluid_constraint.rs  total_shape_constraint.rs
src/engine/: mod.rs
src/entity/: entity.rs  entity_system.rs  mod.rs
src/event/: event_system.rs  mod.rs
src/game/: game.rs  game_state.rs  introduction.rs  leaderboard.rs  mod.rs  settings.rs  ui.rs
src/level/: level.rs  level_builder.rs  level_builder_operation_registry.rs  level_entity.rs  mod.rs
src/math/: aabb2d.rs  float.rs  mod.rs  random.rs  rect.rs  vec2.rs  vec3.rs
src/operations/: mod.rs  operation_merge.rs  operation_move.rs  operation_split.rs
src/particles/: body.rs  fluid_emitter.rs  (+10 more)
(+146 files in other folders)
