[package]
name = "merge-and-split"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "26.0.1"
pollster = "0.3"
cgmath = "0.18"
bytemuck = { version = "1.16", features = [ "derive" ] }

[dependencies.image]
version = "0.24"
#default-features = false
features = ["png", "jpeg"]